迭代作为工作项的自定义字段